updated the home page to be responsive and fixed alignment of login component

--- a/frontend/src/components/css/LogIn.css
+++ b/frontend/src/components/css/LogIn.css
@@ -6,6 +6,9 @@
   /* margin-top: 60px; */
   padding: 1rem;
 }
+.login-container div{
+  display: flex;
+}
 
 .login-box {
   display: flex;
@@ -14,7 +17,8 @@
   padding: 1rem;
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  background-color: rgba(0, 0, 0, 0.5); /* optional: background for contrast */
+  background-color: rgb(51, 49, 49);
+
   width: 100%;
   max-width: 320px; /* keeps it readable on mobile */
 }
